--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@
 # NOTE: .env file will override vars defined here.
 #
 GECKOBOARD_API_KEY=moj_geckoboard_api_key
+GOVUK_NOTIFY_API_KEY=govuk_notify_api_key
 GPLUS_CLIENT_ID=localdev_gplus_client_id
 GPLUS_CLIENT_SECRET=localdev_gplus_client_secret
 SSL_ON=false
