Use rubocop-govuk

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,279 +1,19 @@
-inherit_from:
-  - .rubocop_todo.yml
-
-AllCops:
-  # Exclude anything that isn't really part of our code.
-  # rails_helper is excluded because it's full of solecisms, but it's mostly
-  # generated code and copy-and-pasted snipets from READMEs.
-  Exclude:
-    - 'vendor/**/*'
-    - 'db/**/*'
-    - 'bin/**/*'
-    - '**/*.gemspec'
-    - '**/Rakefile'
-    - '**/Vagrantfile'
-    - 'config/initializers/simple_form.rb'
-    - 'spec/rails_helper.rb'
-    - 'spec/lib/**/*'
-    - 'lib/tasks/**/*'
-    - 'spec/dummy/db/**/*'
-    - 'smoke_test'
-    - 'spec/mailers/previews/*'
-    - 'lib/generators/**/*'
-  TargetRubyVersion: 2.5
-  TargetRailsVersion: 5.0
-  DisabledByDefault: true
-
-Rails:
-  Enabled: true
-
-require: rubocop-rspec
-
-# Just indent parameters by two spaces. It's less volatile if methods change,
-# and there's less busy work lining things up.
-Layout/ParameterAlignment:
-  EnforcedStyle: with_fixed_indentation
-
-Style/CollectionMethods:
-  PreferredMethods:
-    inject: 'inject'
-    reduce: 'inject'
-
-# Chain methods with trailing dots.
-Layout/DotPosition:
-  EnforcedStyle: trailing
-
-# Percent-formatting and hash interpolation both have their place. Don't
-# enforce any particular one.
-Style/FormatString:
-  Enabled: false
-
-# It's not really clearer to replace every if with a return if.
-Style/GuardClause:
-  Enabled: false
-
-Layout/LineLength:
-  Max: 120
-  Exclude:
-    - 'spec/**/*'
-
-# Don't worry about long methods in specs.
-Metrics/MethodLength:
-  Max: 15
-  Exclude:
-    - 'spec/**/*'
-
-# Enforce single quotes everywhere except in specs (because there's a lot of
-# human text with apostrophes in spec names, and using double quotes for all
-# of those is more consistent. There shouldn't be much human-readable text in
-# the application code: that is better moved to the locale files.
-Style/StringLiterals:
-  Enabled: false
-
-Layout/LeadingCommentSpace:
-  Enabled: false
-
-# Prefer sensible naming to comments everywhere.
-Style/Documentation:
-  Description: Document classes and non-namespace modules.
-  Enabled: false
-
-# Would enforce do_y if x over if x / do y / end. As with GuardClause above,
-# this enforces code organisation that doesn't necesarily make things clearer.
-Style/IfUnlessModifier:
-  Enabled: false
-
-Style/CaseEquality:
-  Enabled: false
-
-# Allow safe assignment in conditions.
-Lint/AssignmentInCondition:
-  AllowSafeAssignment: false
-
-Lint/DeprecatedOpenSSLConstant:
-  Enabled: true
-
-Lint/MixedRegexpCaptureTypes:
-  Enabled: true
-
-Lint/RaiseException:
-  Enabled: true
-
-Lint/StructNewOverride:
-  Enabled: true
-
-Style/ClassAndModuleChildren:
-  Enabled: false
-
-Style/RegexpLiteral:
-  Enabled: false
-
-Layout/EmptyLinesAroundBlockBody:
-  Enabled: false
-
-Layout/EmptyLinesAroundClassBody:
-  Enabled: false
-
-Layout/EmptyLinesAroundModuleBody:
-  Enabled: false
-
-Style/MethodDefParentheses:
-  Enabled: false
-
-Layout/HashAlignment:
-  Enabled: false
-
-Layout/EmptyLinesAroundAttributeAccessor:
-  Enabled: false
-
-Layout/SpaceAroundMethodCallOperator:
-  Enabled: true
-
-Style/BlockDelimiters:
-  Enabled: false
-
-Style/DoubleNegation:
-  Enabled: false
-
-Style/WordArray:
-  Enabled: false
-
-Naming/HeredocDelimiterNaming:
-  Enabled: false
-
-Metrics/ClassLength:
-  CountComments: false
-  Max: 120
-
-Metrics/ModuleLength:
-  Max: 115
-
-RSpec/DescribeClass:
-  Exclude:
-    - 'spec/views/**/*'
-    - 'spec/config/schedule_spec.rb'
-    - 'spec/features/**/*'
-
-Metrics/AbcSize:
-  Exclude:
-    - 'spec/support/profile.rb'
-
-Rails/TimeZone:
-  Exclude:
-    - 'spec/**/*'
-
-Rails/Date:
-  Exclude:
-    - 'spec/**/*'
-
-Lint/Debugger:
-  Exclude:
-    - 'spec/**/*'
-
-Style/SingleLineBlockParams:
-  Enabled: false
-
-Style/ClassVars:
-  Exclude:
-    - 'spec/**/*'
-
-Layout/FirstArrayElementIndentation:
-  Exclude:
-    - 'spec/**/*'
-
-Layout/SpaceAroundOperators:
-  Enabled: false
-
-Performance/TimesMap:
-  Exclude:
-    - 'spec/**/*'
-
-Style/ZeroLengthPredicate:
-  Exclude:
-    - 'Gemfile'
-
-RSpec/NotToNot:
-  Enabled: false
-
-RSpec/AnyInstance:
-  Enabled: false
-
-RSpec/InstanceVariable:
-  Enabled: false
-
-Rails/ScopeArgs:
-  Enabled: false
-
-# Switch off due to upgrade
-
-Lint/RedundantWithObject:
-  Enabled: false
-
-FactoryBot/CreateList:
-  Enabled: false
-
-Lint/MissingSuper:
-  Enabled: false # was causing circle to fail
-
-RSpec/LeakyConstantDeclaration:
-  Enabled: false # possibly reenable, after fixing impage_dimension_validator_spec.rb
-
-Rails/HelperInstanceVariable:
-  Enabled: false # would need some thought about refactor will not do before upgrade to rails 5
-
-Capybara/VisibilityMatcher:
-  Enabled: false
-
-Naming/MethodParameterName:
-  Enabled: false
-
-Style/FormatStringToken:
-  Enabled: false
-
-Rails/InverseOf:
-  Enabled: false
-
-Rails/UniqueValidationWithoutIndex:
-  Enabled: false
-
-Rails/HasManyOrHasOneDependent:
-  Enabled: false
-
-RSpec/SubjectStub:
-  Enabled: false
-
-Rails/LexicallyScopedActionFilter:
-  Enabled: false
-
-Style/MissingRespondToMissing:
-  Enabled: false
-
-Style/ExponentialNotation:
-  Enabled: true
-
-Style/HashEachMethods:
-  Enabled: true
-
-Style/HashTransformKeys:
-  Enabled: true
-
-Style/HashTransformValues:
-  Enabled: true
-
-Style/RedundantRegexpCharacterClass:
-  Enabled: false
-
-Style/RedundantRegexpEscape:
-  Enabled: false
-
-Style/SlicingWithRange:
-  Enabled: true
-
-Rails/ApplicationController:
-  Exclude:
-    - 'app/controllers/health_check_controller.rb'
-    - 'app/controllers/ping_controller.rb'
-
-Naming/MemoizedInstanceVariableName:
-  Exclude:
-    - 'lib/geckoboard_publisher/profiles_percentage_report.rb'
+inherit_gem:
+  rubocop-govuk:
+    - config/default.yml
+    - config/rails.yml
+    - config/rspec.yml
+
+inherit_mode:
+  merge:
+    - Exclude
+
+# **************************************************************
+# TRY NOT TO ADD OVERRIDES IN THIS FILE
+#
+# This repo is configured to follow the RuboCop GOV.UK styleguide.
+# Any rules you override here will cause this repo to diverge from
+# the way we write code in all other GOV.UK repos.
+#
+# See https://github.com/alphagov/rubocop-govuk/blob/main/CONTRIBUTING.md
+# **************************************************************
