--- a/config/kubernetes/production/cron-photo-profiles-report.yaml
+++ b/config/kubernetes/production/cron-photo-profiles-report.yaml
@@ -47,5 +47,5 @@ spec:
             command:
               - /bin/sh
               - "-c"
-              - "rails runner 'GeckoboardPublisher::PhotoProfilesReport.new.publish!(true)'"
+              - "rails runner 'GeckoboardPublisher::PhotoProfilesReport.new.publish!(force: true)'"
           restartPolicy: OnFailure
