Use short lived credentials

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,12 @@ version: 2.1
 
 orbs:
   slack: circleci/slack@3.4.2
+  aws-cli: circleci/aws-cli@4.0.0
+  aws-ecr: circleci/aws-ecr@8.2.1 # this orb doesn't support OIDC v2, so we use aws-cli to authenticate
 
 references:
   defaults: &defaults
     working_directory: ~/peoplefinder
-    resource_class: small
 
 # Sets up the docker images and environment variables that we use
   test_container_config: &test_container_config
@@ -43,7 +44,7 @@ references:
     docker:
       - image: ministryofjustice/cloud-platform-tools:1.29
 
-# These are defining the steps which are used below in the jobs
+  # These are defining the steps which are used below in the jobs
 
   install_expect: &install_expect
     run:
@@ -124,22 +125,45 @@ references:
         ./cc-test-reporter format-coverage -t simplecov -o "coverage/codeclimate.$CIRCLE_NODE_INDEX.json"
         ./cc-test-reporter sum-coverage --output - coverage/codeclimate.*.json | ./cc-test-reporter upload-coverage --debug --input -
 
-  configure_aws_profile: &configure_aws_profile
-    run:
-      name: Configure AWS CLI
-      command: |
-        aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} --profile ecr-live-peoplefinder
-        aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY} --profile ecr-live-peoplefinder
-        aws configure set default.region ${AWS_DEFAULT_REGION} --profile ecr-live-peoplefinder
+  aws_setup: &aws_setup
+    # Authenticate to AWS using OIDC v2 with the AWS CLI
+    aws-cli/setup:
+      role_arn: $ECR_ROLE_TO_ASSUME
+      region: $ECR_REGION
 
-  build_and_push_docker_image: &build_and_push_docker_image
+  ecr_login: &ecr_login
     run:
-      name: Build docker image
+      name: Authenticate to the ECR repository
       command: |
-        . build.sh circleci
+        aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
+
+  configure_build_tag: &configure_build_tag
+    run:
+      name: Create build tag
+      command: |
+        current_branch=$(git branch | grep \* | cut -d ' ' -f2)
+        short_version=$(git rev-parse --short $current_branch)
+        build_tag=cmoj-${current_branch}-${short_version}
+
+        echo "export BUILD_TAG=${build_tag}" >> $BASH_ENV
+        source $BASH_ENV
+
         mkdir -p workspace
         echo $BUILD_TAG > workspace/build_tag
-        python3 config/pipeline/aws_ecr_scan_results.py --search peoplefinder-ecr --tag $BUILD_TAG --slack_webhook $SLACK_WEBHOOK || true
+
+  build_and_push_image: &build_and_push_image
+    aws-ecr/build-image:
+      push-image: true
+      tag: $BUILD_TAG
+      region: $ECR_REGION
+      repo: $ECR_REPOSITORY
+
+  scan_for_vulnerabilities: &scan_for_vulnerabilities
+    run:
+      name: Check ECR scan results
+      command: |
+        build_tag=`cat /tmp/workspace/build_tag`
+        python3 config/pipeline/aws_ecr_scan_results.py --search contact-moj-ecr --tag $build_tag --slack_webhook $SLACK_WEBHOOK || true
 
   deploy_to_dev: &deploy_to_dev
     run:
@@ -172,8 +196,7 @@ jobs:
 
   build_and_test:
     <<: *test_container_config
-    resource_class: medium
-    working_directory: ~/peoplefinder
+    <<: *defaults
     steps:
       - checkout
       - *restore_cache
@@ -189,35 +212,44 @@ jobs:
       - *upload_test_coverage
 
   build_branch_and_push_to_ecr:
-    <<: *deploy_container_config
+    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
     <<: *defaults
     steps:
       - checkout
       - attach_workspace:
           at: /tmp/workspace
-      - setup_remote_docker
-      - *configure_aws_profile
-      - *build_and_push_docker_image
+      - *aws_setup
+      - *ecr_login
+      - *configure_build_tag
+      - *build_and_push_image
       - persist_to_workspace:
           root: workspace
           paths:
             - build_tag
 
   build_main_and_push_to_ecr:
-    <<: *deploy_container_config
+    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
     <<: *defaults
     steps:
       - checkout
       - attach_workspace:
           at: /tmp/workspace
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - *configure_aws_profile
-      - *build_and_push_docker_image
+      - *aws_setup
+      - *ecr_login
+      - *configure_build_tag
+      - *build_and_push_image
       - persist_to_workspace:
           root: workspace
           paths:
             - build_tag
+
+  scan_image:
+    <<: *deploy_container_config
+    steps:
+      - checkout
+      - attach_workspace:
+          at: /tmp/workspace
+      - *scan_for_vulnerabilities
 
   dev_deployment_tasks: &do_dev_deployment_tasks
     <<: *deploy_container_config
@@ -284,9 +316,12 @@ workflows:
       - build_main_and_push_to_ecr:
           requires:
             - build_and_test
-      - deploy_main_to_dev:
+      - scan_image:
           requires:
             - build_main_and_push_to_ecr
+      - deploy_main_to_dev:
+          requires:
+            - scan_image
       - deploy_main_to_staging_approval:
           type: approval
           requires:
