--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,11 +141,10 @@ references:
     run:
       name: Create build tag
       command: |
-        current_branch=$(git branch | grep \* | cut -d ' ' -f2)
-        short_version=$(git rev-parse --short $current_branch)
-        build_tag=cmoj-${current_branch}-${short_version}
+        current_version=$(git rev-parse --short ${CIRCLE_BRANCH})
+        build_tag=pf-${current_branch}-${current_version}
 
-        echo "export BUILD_TAG=${build_tag}" >> $BASH_ENV
+        echo "export BUILD_TAG=${build_tag} COMMIT_ID=${current_version}" >> $BASH_ENV
         source $BASH_ENV
 
         mkdir -p workspace
@@ -157,6 +156,11 @@ references:
       tag: $BUILD_TAG
       region: $ECR_REGION
       repo: $ECR_REPOSITORY
+      extra-build-args: |
+        --build-arg VERSION_NUMBER=${ECR_REPOSITORY}:${BUILD_TAG} \
+        --build-arg BUILD_DATE=$(date +%Y-%m-%dT%H:%M:%S%z) \
+        --build-arg COMMIT_ID=${COMMIT_ID} \
+        --build-arg BUILD_TAG=${BUILD_TAG} \
 
   scan_for_vulnerabilities: &scan_for_vulnerabilities
     run:
