--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,10 +141,11 @@ references:
     run:
       name: Create build tag
       command: |
-        current_version=$(git rev-parse --short ${CIRCLE_BRANCH})
-        build_tag=pf-${current_branch}-${current_version}
+        prefix="pf"
+        short_version=$(git rev-parse --short ${CIRCLE_BRANCH})
+        build_tag=$prefix-$CIRCLE_BRANCH-$short_version
 
-        echo "export BUILD_TAG=${build_tag} COMMIT_ID=${current_version}" >> $BASH_ENV
+        echo "export BUILD_TAG=$build_tag" >> $BASH_ENV
         source $BASH_ENV
 
         mkdir -p workspace
@@ -157,10 +158,9 @@ references:
       region: $ECR_REGION
       repo: $ECR_REPOSITORY
       extra-build-args: |
-        --build-arg VERSION_NUMBER=${ECR_REPOSITORY}:${BUILD_TAG} \
         --build-arg BUILD_DATE=$(date +%Y-%m-%dT%H:%M:%S%z) \
-        --build-arg COMMIT_ID=${COMMIT_ID} \
-        --build-arg BUILD_TAG=${BUILD_TAG} \
+        --build-arg COMMIT_ID=$CIRCLE_SHA1 \
+        --build-arg BUILD_TAG=$BUILD_TAG \
 
   scan_for_vulnerabilities: &scan_for_vulnerabilities
     run:
