--- a/config/kubernetes/production/cron-profile-percentage-report.yaml
+++ b/config/kubernetes/production/cron-profile-percentage-report.yaml
@@ -9,6 +9,7 @@ spec:
     spec:
       template:
         spec:
+          serviceAccountName: peoplefinder
           containers:
           - name: jobs
             image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
