--- a/config/kubernetes/production/cron-never-logged-in-notifier.yaml
+++ b/config/kubernetes/production/cron-never-logged-in-notifier.yaml
@@ -9,6 +9,7 @@ spec:
     spec:
       template:
         spec:
+          serviceAccountName: peoplefinder
           containers:
           - name: jobs
             image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
@@ -29,16 +30,6 @@ spec:
                   secretKeyRef:
                     name: peoplefinder-s3-output
                     key: bucket_name
-              - name: S3_KEY
-                valueFrom:
-                  secretKeyRef:
-                    name: peoplefinder-s3-output
-                    key: access_key_id
-              - name: S3_SECRET
-                valueFrom:
-                  secretKeyRef:
-                    name: peoplefinder-s3-output
-                    key: secret_access_key
             envFrom:
             - configMapRef:
                 name: environment-variables
