add hmiprobation.gov.uk domain

--- a/db/seeds/data/permitted_domains.yml
+++ b/db/seeds/data/permitted_domains.yml
@@ -13,6 +13,7 @@
 - hmcts.gsi.gov.uk
 - hmiprisons.gov.uk
 - hmiprisons.gsi.gov.uk
+- hmiprobation.gov.uk
 - hmiprobation.gsi.gov.uk
 - hmps.gsi.gov.uk
 - homeoffice.gsi.gov.uk
