--- a/config/kubernetes/development/env-configmap.yaml
+++ b/config/kubernetes/development/env-configmap.yaml
@@ -12,5 +12,4 @@ data:
   S3_REGION: 'eu-west-2'
   GOVUK_APP_DOMAIN: 'peoplefinder.service.gov.uk'
   GOVUK_WEBSITE_ROOT: 'development'
-  MOJ_PF_ES_URL: 'aws-es-proxy-service:9200'
-  
+  MOJ_PF_ES_URL: 'opensearch-proxy-service-cloud-platform-80d17ced.peoplefinder-development.svc.cluster.local:8080'
