--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,11 @@ inherit_mode:
   merge:
     - Exclude
 
+AllCops:
+  Exclude:
+    - 'lib/tasks/opensearch.rake'
+
+
 # **************************************************************
 # TRY NOT TO ADD OVERRIDES IN THIS FILE
 #
