--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -41,6 +41,11 @@ spec:
                 secretKeyRef:
                   name: peoplefinder-s3-output
                   key: bucket_name
+            - name: MOJ_PF_ES_URL
+              valueFrom:
+                secretKeyRef:
+                  name: peoplefinder-opensearch-output
+                  key: proxy_url
           envFrom:
             - configMapRef:
                 name: environment-variables
