--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -104,3 +104,4 @@ spec:
                 name: environment-variables
             - secretRef:
                 name: app-secrets
+            - name: metrics
