--- a/config/kubernetes/production/cron-user-behaviour-report.yaml
+++ b/config/kubernetes/production/cron-user-behaviour-report.yaml
@@ -43,5 +43,5 @@ spec:
             command:
               - /bin/sh
               - "-c"
-              - "rails runner 'CsvPublisher::UserBehaviorReport.publish!'"
+              - "bundle exec rails runner 'CsvPublisher::UserBehaviorReport.publish!'"
           restartPolicy: OnFailure
