--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,7 @@ references:
         if [ "${CIRCLE_NODE_INDEX}" == "0" ]; then
           bundle config deployment true
           bundle check || bundle install && bundle clean
+          yarn install --frozen-lockfile
         fi
 
   save_cache: &save_cache
