--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,8 +153,9 @@ references:
       name: Create build tag
       command: |
         prefix="pf"
-        short_version=$(git rev-parse --short ${CIRCLE_BRANCH})
-        build_tag=$prefix-$CIRCLE_BRANCH-$short_version
+        short_version=$(git rev-parse --short $CIRCLE_BRANCH)
+        branch=$(echo $CIRCLE_BRANCH | sed -r 's/[\/]+/-/g') # replace / with -
+        build_tag=$prefix-$branch-$short_version
 
         echo "export BUILD_TAG=$build_tag" >> $BASH_ENV
         source $BASH_ENV
