--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,6 +125,16 @@ references:
     store_artifacts:
       path: coverage
 
+  check_coverage: &check_coverage
+    run:
+      name: Check coverage
+      command: |
+        limit=100
+        cov_val=$(grep -o '"line":.*' coverage/.last_run.json | cut -d" " -f2-)
+        if (( $cov_val < $limit )); then
+          exit 1
+        fi
+
   aws_setup: &aws_setup
     # Authenticate to AWS using OIDC v2 with the AWS CLI
     aws-cli/setup:
