--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ references:
     run:
       name: Install dependencies
       command: |
-        apt install bc
+        sudo apt install bc
         if [ "${CIRCLE_NODE_INDEX}" == "0" ]; then
           bundle config deployment true
           bundle check || bundle install && bundle clean
