Remove CodeClimate and save coverage report (#923)
* Remove CodeClimate and save coverage report

* Check coverage

* Run command

* Change

* Update

* Install bc

* Use apt

* Use sudo

* FIx command

* Run update first

* Add message

* Update names

* Add more information about coverage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,8 @@ references:
     run:
       name: Install dependencies
       command: |
+        sudo apt-get update
+        sudo apt-get install bc
         if [ "${CIRCLE_NODE_INDEX}" == "0" ]; then
           bundle config deployment true
           bundle check || bundle install && bundle clean
@@ -112,29 +114,31 @@ references:
 
   brakeman: &brakeman
     run:
-      name: Run Brakeman
+      name: Run brakeman
       command: bundle exec brakeman
-
-  setup_test_reporter: &setup_test_reporter
-    run:
-      name: Setup Code Climate test-reporter
-      command: |
-        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        chmod +x ./cc-test-reporter
-        ./cc-test-reporter before-build
 
   run_unit_and_feature_tests: &run_unit_and_feature_tests
     run:
       name: Run unit and feature tests
       command: |
-        SKIP_SIMPLECOV=false bundle exec rspec
+        bundle exec rspec
 
-  upload_test_coverage: &upload_test_coverage
+  store_coverage: &store_coverage
+    store_artifacts:
+      path: coverage
+
+  check_coverage: &check_coverage
     run:
-      name: Upload the test coverage into codeclimate
+      name: Check test coverage
       command: |
-        ./cc-test-reporter format-coverage -t simplecov -o "coverage/codeclimate.$CIRCLE_NODE_INDEX.json"
-        ./cc-test-reporter sum-coverage --output - coverage/codeclimate.*.json | ./cc-test-reporter upload-coverage --debug --input -
+        limit=95 # Coverage percentage below this number will cause the build to fail
+        coverage=$(grep -o '"line":.*' coverage/.last_run.json | cut -d" " -f2-)
+        echo "Details of test coverage is available from the Artifacts tab"
+        echo "Tests cover $coverage% of code"
+        if (( $(echo "$coverage < $limit" | bc -l) )); then
+          echo "This is under the target of $limit%"
+          exit 1
+        fi
 
   aws_setup: &aws_setup
     # Authenticate to AWS using OIDC v2 with the AWS CLI
@@ -217,9 +221,9 @@ jobs:
       - *set_up_the_database
       - *rubocop
       - *brakeman
-      - *setup_test_reporter
       - *run_unit_and_feature_tests
-      - *upload_test_coverage
+      - *store_coverage
+      - *check_coverage
 
   build_branch_and_push_to_ecr:
     executor: machine_executor
