Permit the gov.sscl.com domain.

--- a/db/seeds/data/permitted_domains.yml
+++ b/db/seeds/data/permitted_domains.yml
@@ -9,6 +9,7 @@
 - cshrcasework.justice.gov.uk
 - digital.justice.gov.uk
 - giaa.gov.uk
+- gov.sscl.com
 - hmcourts-service.gsi.gov.uk
 - hmcts.gsi.gov.uk
 - hmiprisons.gov.uk
