--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:12.15
+        image: postgres:12-alpine
         env:
           POSTGRES_DB: peoplefinder_test
           POSTGRES_USER: postgres
