--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,9 @@ jobs:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
+      opensearch:
+        image: bitnami/opensearch:latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
