update webapp and jobs image

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,6 +114,8 @@ jobs:
           kubectl set image -n ${KUBE_NAMESPACE} \
           deployment/peoplefinder \
           webapp="${{ vars.ECR_URL }}:$SHA"
+          metrics="${{ vars.ECR_URL }}:$SHA"
+          jobs="${{ vars.ECR_URL }}:$SHA"
 
       - name: Send deploy notification to product Slack channel
         uses: slackapi/slack-github-action@v1.25.0
@@ -202,6 +204,8 @@ jobs:
           kubectl set image -n ${KUBE_NAMESPACE} \
           deployment/peoplefinder \
           webapp="${{ vars.ECR_URL }}:$SHA"
+          metrics="${{ vars.ECR_URL }}:$SHA"
+          jobs="${{ vars.ECR_URL }}:$SHA"
 
       - name: Send deploy notification to product Slack channel
         uses: slackapi/slack-github-action@v1.25.0
@@ -291,6 +295,8 @@ jobs:
           kubectl set image -n ${KUBE_NAMESPACE} \
           deployment/peoplefinder \
           webapp="${{ vars.ECR_URL }}:$SHA"
+          metrics="${{ vars.ECR_URL }}:$SHA"
+          jobs="${{ vars.ECR_URL }}:$SHA"
 
       - name: Send deploy notification to product Slack channel
         uses: slackapi/slack-github-action@v1.25.0
