--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,8 +113,8 @@ jobs:
         run: |
           kubectl set image -n ${KUBE_NAMESPACE} \
           deployment/peoplefinder \
-          webapp="${{ vars.ECR_URL }}:$SHA"
-          metrics="${{ vars.ECR_URL }}:$SHA"
+          webapp="${{ vars.ECR_URL }}:$SHA" \
+          metrics="${{ vars.ECR_URL }}:$SHA" \
           jobs="${{ vars.ECR_URL }}:$SHA"
 
       - name: Send deploy notification to product Slack channel
@@ -203,8 +203,8 @@ jobs:
         run: |
           kubectl set image -n ${KUBE_NAMESPACE} \
           deployment/peoplefinder \
-          webapp="${{ vars.ECR_URL }}:$SHA"
-          metrics="${{ vars.ECR_URL }}:$SHA"
+          webapp="${{ vars.ECR_URL }}:$SHA" \
+          metrics="${{ vars.ECR_URL }}:$SHA" \
           jobs="${{ vars.ECR_URL }}:$SHA"
 
       - name: Send deploy notification to product Slack channel
@@ -294,8 +294,8 @@ jobs:
         run: |
           kubectl set image -n ${KUBE_NAMESPACE} \
           deployment/peoplefinder \
-          webapp="${{ vars.ECR_URL }}:$SHA"
-          metrics="${{ vars.ECR_URL }}:$SHA"
+          webapp="${{ vars.ECR_URL }}:$SHA" \
+          metrics="${{ vars.ECR_URL }}:$SHA" \
           jobs="${{ vars.ECR_URL }}:$SHA"
 
       - name: Send deploy notification to product Slack channel
