Update image name, deployment metrics and jobs (#947)
* remove -ecr

* update webapp and jobs image

* fix syntax

* Update config/kubernetes/development/deployment.yaml

Co-authored-by: Andrew Pepler <andrew.pepler@digital.justice.gov.uk>

* update image for relevant env

---------

Co-authored-by: Andrew Pepler <andrew.pepler@digital.justice.gov.uk>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,7 +113,9 @@ jobs:
         run: |
           kubectl set image -n ${KUBE_NAMESPACE} \
           deployment/peoplefinder \
-          webapp="${{ vars.ECR_URL }}:$SHA"
+          webapp="${{ vars.ECR_URL }}:$SHA" \
+          metrics="${{ vars.ECR_URL }}:$SHA" \
+          jobs="${{ vars.ECR_URL }}:$SHA"
 
       - name: Send deploy notification to product Slack channel
         uses: slackapi/slack-github-action@v1.25.0
@@ -201,7 +203,9 @@ jobs:
         run: |
           kubectl set image -n ${KUBE_NAMESPACE} \
           deployment/peoplefinder \
-          webapp="${{ vars.ECR_URL }}:$SHA"
+          webapp="${{ vars.ECR_URL }}:$SHA" \
+          metrics="${{ vars.ECR_URL }}:$SHA" \
+          jobs="${{ vars.ECR_URL }}:$SHA"
 
       - name: Send deploy notification to product Slack channel
         uses: slackapi/slack-github-action@v1.25.0
@@ -290,7 +294,9 @@ jobs:
         run: |
           kubectl set image -n ${KUBE_NAMESPACE} \
           deployment/peoplefinder \
-          webapp="${{ vars.ECR_URL }}:$SHA"
+          webapp="${{ vars.ECR_URL }}:$SHA" \
+          metrics="${{ vars.ECR_URL }}:$SHA" \
+          jobs="${{ vars.ECR_URL }}:$SHA"
 
       - name: Send deploy notification to product Slack channel
         uses: slackapi/slack-github-action@v1.25.0
