--- a/config/kubernetes/production/cron-user-behaviour-report.yaml
+++ b/config/kubernetes/production/cron-user-behaviour-report.yaml
@@ -12,7 +12,7 @@ spec:
           serviceAccountName: peoplefinder
           containers:
           - name: jobs
-            image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
+            image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder:production.latest
             imagePullPolicy: IfNotPresent
             env:
               - name: DATABASE_URL
